# detection_limits

./: .gitignore  CODEMETA.yaml  CODEOWNERS  DESCRIPTION.md  LICENSE.md  MANIFEST.in  METRICS.md  README.md  classifiers.txt  index.html  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: dice_to_SNR.py  generate_metrics.py  match_ai_data.py  plot_ai_model_predictions.py  plot_image_quality.py
src/detection_limits/: __init__.py  metrics.py  plot_ai.py  plot_quality.py
tests/: conftest.py  test_metrics.py
web/: index.html  index_showSEMFigures.html  test_conditional.html  test_metric_select.html  test_toggle_button.html
web/Images/: merged_ai3_data_quality.csv  merged_ai5_data_quality.csv  merged_ai7_data_quality.csv
web/Images/vis_model3/dice2snr_mapping/: Cohend_est_vs_Dice.csv  Cohend_est_vs_FNR.csv  Cohend_est_vs_FPR.csv  Cohend_param_vs_Dice.csv  Cohend_param_vs_FNR.csv  Cohend_param_vs_FPR.csv  PSNR_vs_Dice.csv  PSNR_vs_FNR.csv  PSNR_vs_FPR.csv  SNR_RMSpower_est_vs_Dice.csv  SNR_RMSpower_est_vs_FNR.csv  SNR_RMSpower_est_vs_FPR.csv  SNR_RMSpower_param_vs_Dice.csv  SNR_RMSpower_param_vs_FNR.csv  SNR_RMSpower_param_vs_FPR.csv  SNR_invCV2_est_vs_Dice.csv  SNR_invCV2_est_vs_FNR.csv  SNR_invCV2_est_vs_FPR.csv  SNR_invCV2_param_vs_Dice.csv  SNR_invCV2_param_vs_FNR.csv  SNR_invCV2_param_vs_FPR.csv  SNR_invCV_est_vs_Dice.csv  SNR_invCV_est_vs_FNR.csv  SNR_invCV_est_vs_FPR.csv  SNR_invCV_param_vs_Dice.csv  SNR_invCV_param_vs_FNR.csv  SNR_invCV_param_vs_FPR.csv  SNR_power_est_vs_Dice.csv  SNR_power_est_vs_FNR.csv  SNR_power_est_vs_FPR.csv  SNR_power_param_vs_Dice.csv  SNR_power_param_vs_FNR.csv  SNR_power_param_vs_FPR.csv
web/Images/vis_model5/dice2snr_mapping/: Cohend_est_vs_Dice.csv  Cohend_est_vs_FNR.csv  Cohend_est_vs_FPR.csv  Cohend_param_vs_Dice.csv  Cohend_param_vs_FNR.csv  Cohend_param_vs_FPR.csv  PSNR_vs_Dice.csv  PSNR_vs_FNR.csv  PSNR_vs_FPR.csv  SNR_RMSpower_est_vs_Dice.csv  SNR_RMSpower_est_vs_FNR.csv  SNR_RMSpower_est_vs_FPR.csv  SNR_RMSpower_param_vs_Dice.csv  SNR_RMSpower_param_vs_FNR.csv  SNR_RMSpower_param_vs_FPR.csv  SNR_invCV2_est_vs_Dice.csv  (+17 more)
(+33 files in other folders)
